[gd_scene load_steps=4 format=3 uid="uid://bqe6ey42tjo5b"]

[ext_resource type="Script" uid="uid://dn47e0d2526qn" path="res://scenes/portal_entrence_1.gd" id="1_na37u"]
[ext_resource type="FontFile" uid="uid://kg08gr31fkiq" path="res://fonts/Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" id="2_bse68"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jboht"]
size = Vector2(60, 64)

[node name="PortalEntrence1" type="Area2D" groups=["Player"]]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_na37u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_jboht")

[node name="EnterTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -51.0
offset_top = -64.0
offset_right = 53.0
offset_bottom = -24.0
color = Color(0.120599605, 0.15217325, 0.15217325, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 105.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.3764706, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bse68")
theme_override_font_sizes/font_size = 26
text = "0/25"
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="EnterTimer" to="." method="_on_enter_timer_timeout"]
